Did some changes in auth nav graph to set on back pressed which screen it should go or to exit the app. change animation of sign up page previous animation was download and current animation is made by me using figma and lottie.

--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -15,7 +15,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="350dp"
                     app:lottie_autoPlay="true"
-                    app:lottie_fileName="login_and_sign.json" />
+                    app:lottie_fileName="anim.json" />
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
